Fix to support dialog bug on iOS (#7)
Dialog cross platform fix

Closes #6

--- a/css/styles.css
+++ b/css/styles.css
@@ -286,6 +286,7 @@ img {
 
 /* The Modal (background) */
 .modal {
+  display: none;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
